fix letter spacing

--- a/pages/place/place.module.scss
+++ b/pages/place/place.module.scss
@@ -154,7 +154,7 @@
         font-size: 2rem;
         color: $place-heading-color;
         font-weight: 500;
-        letter-spacing: 2px;
+        // letter-spacing: 2px;
         margin-bottom: 2rem;
     }
 
@@ -171,7 +171,7 @@
     h5 {
         color: $place-heading-color;
         font-size: 1.3rem;
-        letter-spacing: 1.3px;
+        // letter-spacing: 1.3px;
         font-weight: 500;
         margin-bottom: .8rem;
     }
@@ -187,7 +187,7 @@
     h5 {
         color: $place-heading-color;
         font-size: 1.3rem;
-        letter-spacing: 1.3px;
+        // letter-spacing: 1.3px;
         font-weight: 500;
         margin-bottom: .8rem;
     }
@@ -276,7 +276,7 @@
         background-color: #f8f8f8;
         font-size: 1.1rem;
         font-weight: 300;
-        letter-spacing: 1.36px;
+        // letter-spacing: 1.36px;
         color: #484848;
     }
 }
